增加开放问答

--- a/tiny-client-fancan/app.json
+++ b/tiny-client-fancan/app.json
@@ -11,6 +11,7 @@
     "pages/setting/setting",
     "pages/scalelist/scalelist",
     "pages/register/register",
+    "pages/openQA/openQA",
     "pages/web/web"
   ],
   "window": {
